update: update the script to fetch all commit history before compare HEAD to previous
Updated github action script and it should now

--- a/.github/workflows/auto-pr-merge.yml
+++ b/.github/workflows/auto-pr-merge.yml
@@ -10,6 +10,9 @@ jobs:
       # Check out the repository code
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          # Fetch the full commit history
+          fetch-depth: 0
 
       # Check if the pull request only modifies the CONTRIBUTORS.md file
       - name: Check if PR only modifies CONTRIBUTORS.md
