--- a/.github/workflows/auto-pr-merge.yml
+++ b/.github/workflows/auto-pr-merge.yml
@@ -36,19 +36,19 @@ jobs:
         uses: actions/github-script@v5
         with:
           script: |
-            # Attempt to merge the pull request using the squash method
+            // Attempt to merge the pull request using the squash method
             const response = await github.rest.pulls.merge({
               owner: context.repo.owner,
               repo: context.repo.repo,
               pull_number: context.issue.number,
               merge_method: "squash"
             })
-            # Check if the merge was successful by checking the status code of the response
+            // Check if the merge was successful by checking the status code of the response
             if (response.status === 200) {
-              # Set the merged output variable to 'true'
+              // Set the merged output variable to 'true'
               core.setOutput('merged', 'true')
             } else {
-              # Set the merged output variable to 'false'
+              // Set the merged output variable to 'false'
               core.setOutput('merged', 'false')
             }
 
@@ -58,7 +58,7 @@ jobs:
         uses: actions/github-script@v5
         with:
           script: |
-            # Post a comment on the pull request using the createComment method
+            // Post a comment on the pull request using the createComment method
             github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
@@ -72,9 +72,9 @@ jobs:
         uses: actions/github-script@v5
         with:
           script: |
-            # Check if the pull request only modifies the CONTRIBUTORS.md file
+            // Check if the pull request only modifies the CONTRIBUTORS.md file
             if (steps.is_only_contributors_file_changed.outputs.only_contributors != 'true') {
-              # Post a comment on the pull request saying that it contains changes in other files too which requires review
+              // Post a comment on the pull request saying that it contains changes in other files too which requires review
               github.rest.issues.createComment({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
@@ -82,7 +82,7 @@ jobs:
                 body: "This pull request contains changes in other files too which requires review."
               })
             } else {
-              # Post a comment on the pull request saying that it is on hold for review and should only modify the CONTRIBUTORS.md file and add a non-spam, non-offensive, and non-malicious link.
+              // Post a comment on the pull request saying that it is on hold for review and should only modify the CONTRIBUTORS.md file and add a non-spam, non-offensive, and non-malicious link.
               github.rest.issues.createComment({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
