--- a/.github/workflows/auto-pr-merge.yml
+++ b/.github/workflows/auto-pr-merge.yml
@@ -23,10 +23,14 @@ jobs:
           # Check if the list of changed files only contains the CONTRIBUTORS.md file
           if [[ "$FILES_CHANGED" == "CONTRIBUTORS.md" ]]; then
             # Set the only_contributors output variable to 'true'
-            echo "::set-output name=only_contributors::true"
+            # Older way doing it 
+            # echo "::set-output name=only_contributors::true"
+            # new way doing it
+            echo "only_contributors=true" >> $GITHUB_ENV
           else
             # Set the only_contributors output variable to 'false'
-            echo "::set-output name=only_contributors::false"
+            # echo "::set-output name=only_contributors::false"
+            echo "only_contributors=true" >> $GITHUB_ENV
           fi
 
       # Merge the pull request if it only modifies the CONTRIBUTORS.md file
