--- a/.github/workflows/auto-pr-merge.yml
+++ b/.github/workflows/auto-pr-merge.yml
@@ -32,6 +32,10 @@ jobs:
             # echo "::set-output name=only_contributors::false"
             echo "only_contributors=true" >> $GITHUB_ENV
           fi
+          
+      - name: Use environment variable
+        run: |
+          echo "The value of only_contributors is $only_contributors"
 
       # Merge the pull request if it only modifies the CONTRIBUTORS.md file
       - name: Merge PR
