update: update github action script and set else clause to false

--- a/.github/workflows/auto-pr-merge.yml
+++ b/.github/workflows/auto-pr-merge.yml
@@ -30,7 +30,7 @@ jobs:
           else
             # Set the only_contributors output variable to 'false'
             # echo "::set-output name=only_contributors::false"
-            echo "only_contributors=true" >> $GITHUB_ENV
+            echo "only_contributors=false" >> $GITHUB_ENV
           fi
           
       - name: Use environment variable
