--- a/.github/workflows/auto-pr-merge.yml
+++ b/.github/workflows/auto-pr-merge.yml
@@ -40,7 +40,8 @@ jobs:
       # Merge the pull request if it only modifies the CONTRIBUTORS.md file
       - name: Merge PR
         id: merge_pr
-        if: steps.is_only_contributors_file_changed.outputs.only_contributors == 'true'
+        # if: steps.is_only_contributors_file_changed.outputs.only_contributors == 'true'
+        if: env.only_contributors='true'
         uses: actions/github-script@v5
         with:
           script: |
