--- a/.github/workflows/auto-pr-merge.yml
+++ b/.github/workflows/auto-pr-merge.yml
@@ -27,10 +27,13 @@ jobs:
             # echo "::set-output name=only_contributors::true"
             # new way doing it
             echo "only_contributors=true" >> $GITHUB_ENV
+            echo "The value of only_contributors is $only_contributors in the if block"
           else
             # Set the only_contributors output variable to 'false'
             # echo "::set-output name=only_contributors::false"
             echo "only_contributors=false" >> $GITHUB_ENV
+            echo "The value of only_contributors is $only_contributors in else block"
+          echo "The value of only_contributors is $only_contributors"
           fi
 
       # Merge the pull request if it only modifies the CONTRIBUTORS.md file
