--- a/.github/workflows/auto-pr-merge.yml
+++ b/.github/workflows/auto-pr-merge.yml
@@ -14,14 +14,14 @@ jobs:
           # Fetch the full commit history
           fetch-depth: 0
 
-      # Check if the pull request only modifies the CONTRIBUTORS.md file
-      - name: Check if PR only modifies CONTRIBUTORS.md
+      # Check if the pull request only modifies the Contributors.md file
+      - name: Check if PR only modifies Contributors.md
         id: is_only_contributors_file_changed
         run: |
           # Get a list of files changed in the pull request
           FILES_CHANGED=$(git diff --name-only HEAD HEAD~1)
-          # Check if the list of changed files only contains the CONTRIBUTORS.md file
-          if [[ "$FILES_CHANGED" == "CONTRIBUTORS.md" ]]; then
+          # Check if the list of changed files only contains the Contributors.md file
+          if [[ "$FILES_CHANGED" == "Contributors.md" ]]; then
             # Set the only_contributors output variable to 'true'
             # Older way doing it 
             # echo "::set-output name=only_contributors::true"
@@ -36,7 +36,7 @@ jobs:
           echo "The value of only_contributors is $only_contributors"
           fi
 
-      # Merge the pull request if it only modifies the CONTRIBUTORS.md file
+      # Merge the pull request if it only modifies the Contributors.md file
       - name: Merge PR
         id: merge_pr
         # older version
