--- a/.github/workflows/auto-pr-merge.yml
+++ b/.github/workflows/auto-pr-merge.yml
@@ -36,7 +36,7 @@ jobs:
           echo "The value of only_contributors is $only_contributors"
           fi
 
-      # Merge the pull request if it only modifies the Contributors.md file
+      # Merge the pull request if it only modifies the Contributors.md file or if it fail to do then drop failure message as post 
       - name: Merge PR
         id: merge_pr
         # older version
