--- a/.github/workflows/auto-pr-merge.yml
+++ b/.github/workflows/auto-pr-merge.yml
@@ -12,7 +12,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           # Fetch the full commit history
-          fetch-depth: 0
+          # fetch-depth: 0
+          # Fetch only the most recent commit
+          fetch-depth: 1
+
 
       # Check if the pull request only modifies the Contributors.md file
       - name: Check if PR only modifies Contributors.md
