--- a/.github/workflows/auto-pr-merge.yml
+++ b/.github/workflows/auto-pr-merge.yml
@@ -3,9 +3,14 @@ on:
   pull_request:
     types: [opened, synchronize]
 
+
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+      
     steps:
       # Check out the repository code
       - name: Checkout code
