--- a/.github/workflows/auto-pr-merge.yml
+++ b/.github/workflows/auto-pr-merge.yml
@@ -9,7 +9,9 @@ permissions:
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
-      
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
       # Check out the repository code
       - name: Checkout code
