--- a/.github/workflows/auto-pr-merge.yml
+++ b/.github/workflows/auto-pr-merge.yml
@@ -3,7 +3,8 @@ on:
   pull_request:
     types: [opened, synchronize]
     
-permissions: write-all
+permissions:
+  pull-requests: write
     
 jobs:
   auto-merge:
