--- a/.github/workflows/auto-pr-merge.yml
+++ b/.github/workflows/auto-pr-merge.yml
@@ -6,10 +6,10 @@ on:
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
-    
     permissions:
-      contents: write
+      contents: read
       pull-requests: write
+      issues: write
       
     steps:
       # Check out the repository code
