update: update script to remove cache from action script

--- a/.github/workflows/auto-pr-merge.yml
+++ b/.github/workflows/auto-pr-merge.yml
@@ -12,6 +12,10 @@ jobs:
       issues: write
       
     steps:
+      # remove the cache 
+      - name: Clear Cache
+        run: echo "::set-env name=CLEAR_CACHE::true"
+      
       # Check out the repository code
       - name: Checkout code
         uses: actions/checkout@v2
