--- a/.github/workflows/auto-pr-merge.yml
+++ b/.github/workflows/auto-pr-merge.yml
@@ -2,6 +2,8 @@ name: Auto-merge PRs
 on:
   pull_request_target:
     types: [opened, synchronize]
+  pull_request:
+    types: [opened, synchronize]
     
 jobs:
   auto-merge:
