--- a/.github/workflows/auto-pr-merge.yml
+++ b/.github/workflows/auto-pr-merge.yml
@@ -2,8 +2,8 @@ name: Auto-merge PRs
 on:
   pull_request_target:
     types: [opened, synchronize]
-  pull_request:
-    types: [opened, synchronize]
+    paths:
+      - 'Contributors.md'
     
 jobs:
   auto-merge:
@@ -25,31 +25,31 @@ jobs:
           fetch-depth: 2
 
 
-      # Check if the pull request only modifies the Contributors.md file
-      - name: Check if PR only modifies Contributors.md
-        id: is_only_contributors_file_changed
-        run: |
-          # Get a list of files changed in the pull request
-          FILES_CHANGED=$(git diff --name-only HEAD HEAD~1)
+#       # Check if the pull request only modifies the Contributors.md file
+#       - name: Check if PR only modifies Contributors.md
+#         id: is_only_contributors_file_changed
+#         run: |
+#           # Get a list of files changed in the pull request
+#           FILES_CHANGED=$(git diff --name-only HEAD HEAD~1)
           
-          # Set the files_changed environment variable to the list of changed files
-          echo "files_changed=$FILES_CHANGED" >> $GITHUB_ENV
+#           # Set the files_changed environment variable to the list of changed files
+#           echo "files_changed=$FILES_CHANGED" >> $GITHUB_ENV
           
-          # Check if the list of changed files only contains the Contributors.md file
-          if [[ "$FILES_CHANGED" == "Contributors.md" ]]; then
-            # Set the only_contributors output variable to 'true'
-            # Older way doing it 
-            # echo "::set-output name=only_contributors::true"
-            # new way doing it
-            echo "only_contributors=true" >> $GITHUB_ENV
-            echo "The value of only_contributors is $only_contributors in the if block"
-          else
-            # Set the only_contributors output variable to 'false'
-            # echo "::set-output name=only_contributors::false"
-            echo "only_contributors=false" >> $GITHUB_ENV
-            echo "The value of only_contributors is $only_contributors in else block"
-          echo "The value of only_contributors is $only_contributors"
-          fi
+#           # Check if the list of changed files only contains the Contributors.md file
+#           if [[ "$FILES_CHANGED" == "Contributors.md" ]]; then
+#             # Set the only_contributors output variable to 'true'
+#             # Older way doing it 
+#             # echo "::set-output name=only_contributors::true"
+#             # new way doing it
+#             echo "only_contributors=true" >> $GITHUB_ENV
+#             echo "The value of only_contributors is $only_contributors in the if block"
+#           else
+#             # Set the only_contributors output variable to 'false'
+#             # echo "::set-output name=only_contributors::false"
+#             echo "only_contributors=false" >> $GITHUB_ENV
+#             echo "The value of only_contributors is $only_contributors in else block"
+#           echo "The value of only_contributors is $only_contributors"
+#           fi
 
       # Merge the pull request if it only modifies the Contributors.md file or if it fail to do then drop failure message as post 
       - name: Merge PR
@@ -57,7 +57,7 @@ jobs:
         # older version
         # if: steps.is_only_contributors_file_changed.outputs.only_contributors == 'true'
         # new version
-        if: env.only_contributors == 'true'
+#         if: env.only_contributors == 'true'
         uses: actions/github-script@v5
         with:
           script: |
@@ -89,20 +89,20 @@ jobs:
 
 
       # Post a comment on the pull request if it was not merged automatically
-      - name: Post comment on PR if not merged automatically
-        # Check if the pull request only modifies the CONTRIBUTORS.md file
-        if: env.only_contributors != 'true'
-        uses: actions/github-script@v5
-        with:
-          script: |
-            // Post a comment on the pull request saying that it contains changes in other files too which requires review
-            github.rest.issues.createComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.issue.number,
-              body: `Thank you for your pull request. This pull request contains changes in files which requires review. The following files were changed:\n\n**${process.env.files_changed}**`
-            })
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+#       - name: Post comment on PR if not merged automatically
+#         # Check if the pull request only modifies the CONTRIBUTORS.md file
+#         if: env.only_contributors != 'true'
+#         uses: actions/github-script@v5
+#         with:
+#           script: |
+#             // Post a comment on the pull request saying that it contains changes in other files too which requires review
+#             github.rest.issues.createComment({
+#               owner: context.repo.owner,
+#               repo: context.repo.repo,
+#               issue_number: context.issue.number,
+#               body: `Thank you for your pull request. This pull request contains changes in files which requires review. The following files were changed:\n\n**${process.env.files_changed}**`
+#             })
+#           github-token: ${{ secrets.GITHUB_TOKEN }}
 
 
 
