--- a/.github/workflows/auto-pr-merge.yml
+++ b/.github/workflows/auto-pr-merge.yml
@@ -3,7 +3,7 @@ on:
   pull_request_target:
     types: [opened, synchronize]
     paths:
-      - 'Contributors.md'
+      - 'Contributors.md' # <- only run if only contributors file changed
     
 jobs:
   auto-merge:
@@ -68,7 +68,7 @@ jobs:
               pull_number: context.issue.number,
               merge_method: "squash"
             })
-            console.log(response);
+            // console.log(response);
             // Check if the merge was successful by checking the status code of the response
             if (response.status === 200) {
               // Set the merged output variable to 'true'
