--- a/.github/workflows/auto-pr-merge.yml
+++ b/.github/workflows/auto-pr-merge.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
+    if: github.event.pull_request.changed_files == 1 && contains(github.event.pull_request.changed_files, 'Contributors.md')
     permissions:
       contents: write
       pull-requests: write
