--- a/.github/workflows/auto-pr-merge.yml
+++ b/.github/workflows/auto-pr-merge.yml
@@ -103,16 +103,14 @@ jobs:
         uses: actions/github-script@v5
         with:
           script: |
-            // Post a comment on the pull request saying that it contains changes in other files too which requires review
+            const body = `Thank you for your pull request. This pull request contains changes in files which requires review. The following files were changed:\n\n${process.env.files_changed.split(' ').map(file => `- ${file}`).join('\n')}`;
             github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
-              body: |
-                Thank you for your pull request. This pull request contains changes in files which requires review. The following files were changed:
-
-                **${process.env.files_changed.split(' ').map(file => `- ${file}`).join('\n')}**
-            })
+              body: body
+            });
+            
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
 
