--- a/.github/workflows/auto-pr-merge.yml
+++ b/.github/workflows/auto-pr-merge.yml
@@ -46,9 +46,11 @@ jobs:
           if [[ "$FILES_CHANGED" == "Contributors.md" ]]; then
             # Set the only_contributors output variable to 'true'
             echo "only_contributors=true" >> $GITHUB_ENV
+            echo "Only Contributors.md file changed"
           else
             # Set the only_contributors output variable to 'false'
             echo "only_contributors=false" >> $GITHUB_ENV
+            echo " I am in the else clause of condition"
           fi
 
       # Merge the pull request if it only modifies the Contributors.md file or if it fail to do then drop failure message as post 
