--- a/.github/workflows/auto-pr-merge.yml
+++ b/.github/workflows/auto-pr-merge.yml
@@ -89,20 +89,22 @@ jobs:
                 const twitter_logo = "https://edent.github.io/SuperTinyIcons/images/svg/twitter.svg"
                 const fb_logo = "https://edent.github.io/SuperTinyIcons/images/svg/facebook.svg"
 
-                const getMergeMessage = username => `Hello @${username}, congratulations! You've successfully submitted a pull request. 🎉 \n
+                const getMergeMessage = (username) => {
+                  const greeting = `Hello @${username}, congratulations! You've successfully submitted a pull request. 🎉`;
+                  const starRepoMessage = `If you liked the tutorial, please star this repo by clicking the star button on the top right of this page. <img alt="star screenshot" title="star button" src="https://firstcontributions.github.io/assets/star.png">`;
+                  
+                  const nextSteps = `# Next steps 
+                  - Continue contributing: If you're looking for projects to contribute to, checkout our [<img src="${repo_logo}" width="22" title="web app" /> webapp](${web_url}).
+                  - Join our Slack group: We have a community to help/support contributors. [<img src="${slack_logo}" width="22" title="Slack" /> Join slack group](${slack_invite_url}).
+                  - Share on social media: You can share this content to help more people. [ <img alt="twitter" title="twitter" src="${twitter_logo}" width="22"> tweet](${twitter_tweet_share}). [<img alt="twitter" title="twitter" src="${fb_logo}" width="22"> share](${fb_share_link})`;
                 
-                If you liked the tutorial, please star this repo by clicking star button on top right of this page.
-                <img alt="star screenshot" title="star button" src="https://firstcontributions.github.io/assets/star.png">
+                
+                  const feedbackMessage = `We'd love to hear your thoughts about this project. Let us know how we can improve by commenting or opening an issue here.`;
+                  
+                  const gif = `![celebration gif](${getRandomGif()})`;
 
-
-                # Next steps
-                - Continue contributing: If you're looking for projects to contribute to, checkout our [<img src="${repo_logo}" width="22" title="web app" /> webapp](${web_url}).
-                - Join our slack group: We have a community to help/support contributors. [<img src="${slack_logo}" width="22" title="Slack" /> Join slack group](${slack_invite_url}).
-                - Share on social media: You can share this content to help more people. [ <img alt="twitter" title="twitter" src="${twitter_logo}" width="22"> tweet](${twitter_tweet_share}). [<img alt="twitter" title="twitter" src="${fb_logo}" width="22"> share](${fb_share_link})
-
-                We'd love to hear your thoughts about this project. Let us know how we can improve by commenting or opening an issue here.
-
-                ![celebration gif](${getRandomGif()})`;
+                  return `${greeting}\n\n${starRepoMessage}\n\n${nextSteps}\n\n${feedbackMessage}\n\n${gif}`;
+                }
 
                 // Generate the merge message using the getMergeMessage function
                 const message = getMergeMessage(context.payload.pull_request.user.login);
